--- a/_posts/process/quality/2014-08-08-coq.md
+++ b/_posts/process/quality/2014-08-08-coq.md
@@ -7,8 +7,9 @@ term: quality
 title: "How Much We Pay For Quality"
 intro: "Learn how much quality effects the total Budget"
 description: |
+  Learn how much quality effects the total Budget
 keywords:
-  -
+  - cost of quality
 next_step: process/cost/budget
 ---
 
@@ -24,17 +25,13 @@ project team before software product is delivered to you.
 While you and end-users perceive Defects through software interfaces, the majority of Defects do not
 reside in software itself. This is where Defects normally lie (in order of severity):
 
-<ol>
-        <li>Software development contract</li>
-        <li>[Vision](/process/scope/vision)</li>
-        <li>[SRS](/process/scope/srs)</li>
-        <li>[Risk List](/process/risk/risklist)</li>
-        <li>[Iteration](/process/time/schedule}"&gt;Schedule</li> and <a href="${url:process/time/iteration) Plans"/></ol>
-
-<li>Architecture</li>
-
-<li>Design</li>
-
-<li>Software code</li>
-
-<li>Test Plan</li>
+ * Software development contract
+ * [Vision](/process/scope/vision)
+ * [SRS](/process/scope/srs)
+ * [Risk List](/process/risk/risklist)
+ * [Iteration](/process/time/schedule)
+ * Schedule and [Plans](/process/time/iteration)
+ * Architecture
+ * Design
+ * Software code
+ * Test Plan
