--- a/_posts/about/2014-08-08-facts.md
+++ b/_posts/about/2014-08-08-facts.md
@@ -38,40 +38,35 @@ Key facts about TechnoPark Corp.:
   <tr><td>Incorporated in:</td><td>State of Florida, USA</td></tr>
   <tr><td>Legal status:</td><td>Corporation</td></tr>
   <tr><td>Full-time Employees:</td><td>6</td></tr>
-
   <tr><td>Headquarters and Sales Office:</td>
   <td>568 Ninth Street South 202,<br/>
       Naples, Florida 34102, USA<br/>
-      tel. +1 (239) 935 5429</td></tr>
-
+      tel. +1 (860) 506 5536</td></tr>
   <tr><td>Profile:</td><td>Custom software development company</td></tr>
-
   <tr><td>Patents (including pending ones):</td><td>
-      <a href='http://www.freepatentsonline.com/20100042968.pdf'>12/193,010</a>,
-      <a href='http://www.freepatentsonline.com/20100114638.pdf'>12/264,370</a>,
-      12/703,202,
-      12/840,306,
-      12/943,022
+      <a href='https://www.google.com/patents/US20100042968'>12/193,010</a>,
+      <a href='https://www.google.com/patents/US20100114638'>12/264,370</a>,
+      <a href="https://www.google.com/patents/US20110196798">12/703,202</a>,
+      <a href="https://www.google.com/patents/US20120023476">12/840,306</a>,
+      <a href="https://www.google.com/patents/US20120117164">12/943,022</a>
   </td></tr>
-
   <tr><td>Certificates:</td><td>
       <a href='/news/year2008/iso9001'>ISO 9001:2000</a> since Jan-08</td></tr>
-
   <!-- <tr><td>Seals:</td><td><a href='/about/privacypolicy'>BBB</a> Online Seal<br/>
       <a href='/about/privacypolicy'>TRUSTe</a> Privacy Seal</td></tr> -->
-
   <tr><td>Copyrights:</td><td>
-
       TPC Logo with a slogan "Plan Your Success"
       <a href='http://tarr.uspto.gov/servlet/tarr?regser=serial&amp;entry=77438094'>registered</a>
-      on 11-Nov-08 in US Patent and Trademark Office (USPTO)<br/><br/>
+      on 11-Nov-08 in US Patent and Trademark Office (USPTO).<br/><br/>
+
+      "Team as a Service" trademark
+      <a href="http://tmsearch.uspto.gov/bin/showfield?f=doc&amp;state=4803:gr7hap.2.3">registered</a> by USPTO<br/><br/>
 
       Copyright for online project management materials
-      <a href='/about/news/uacopyright'>is registered in Ukraine</a><br/><br/>
+      <a href='/about/news/uacopyright'>is registered in Ukraine</a>.<br/><br/>
 
       Text of our software development contract is registered
       with <a href='http://www.copyright.gov'>US Copyright Office</a>.
-
       </td></tr>
 </table>
 
